--- a/config/config.ini
+++ b/config/config.ini
@@ -58,7 +58,7 @@ app_port = 8000
 # CDN代理加速地址，用于订阅源、频道图标等资源的加速访问 | CDN proxy acceleration address, used for accelerated access to subscription sources, channel icons and other resources
 cdn_url =
 # 生成结果文件路径; 默认值: output/result.txt | Generate result file path; Default value: output/result.txt
-final_file = output/result.txt
+final_file = output/user_result.txt
 # 结果中偏好的酒店源接口数量 | Preferred number of hotel source interfaces in the result
 hotel_num = 10
 # 酒店地区获取分页数量 | Number of hotel region acquisition pages
@@ -112,14 +112,14 @@ speed_test_timeout = 10
 # 测速阶段使用Host地址进行过滤，相同Host地址的频道将共用测速数据，开启后可大幅减少测速所需时间，但可能会导致测速结果不准确；可选值: True, False | Use Host address for filtering during speed measurement, channels with the same Host address will share speed measurement data, enabling this can significantly reduce the time required for speed measurement, but may lead to inaccurate speed measurement results; Optional values: True, False
 speed_test_filter_host = False
 # 模板文件路径， 默认值: config/demo.txt | Template file path, Default value: config/demo.txt
-source_file = config/demo.txt
+source_file = config/user_demo.txt
 # 结果中偏好的订阅源接口数量 | Preferred number of subscription source interfaces in the result
 subscribe_num = 10
 # 时区，可用于控制更新时间显示的时区，可选值：Asia/Shanghai 或其它时区编码 | Time zone, can be used to control the time zone displayed by the update time, optional values: Asia/Shanghai or other time zone codes
 time_zone = Asia/Shanghai
 # 单个频道接口数量 | Number of interfaces per channel
-urls_limit = 10
+urls_limit = 7
 # 定时执行更新时间间隔，单位小时，设置0或空则只运行一次，不作用于工作流，默认值: 12 | Scheduled execution update interval, unit hours, set 0 or empty means run only once, does not apply to workflow, default value: 12
-update_interval = 12
+update_interval = 0
 # 更新时间显示位置，需要开启 open_update_time 才能生效，可选值：top、bottom，top: 显示于结果顶部，bottom: 显示于结果底部 | Update time display position, need to enable open_update_time to take effect, optional values: top, bottom, top: display at the top of the result, bottom: display at the bottom of the result
 update_time_position = top
