--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -30,7 +30,7 @@ open_online_search = False
 # 开启查询请求，数据来源于网络（仅针对酒店源与组播源）; 可选值: True, False | Enable query request, data comes from the network (only for hotel source and multicast source); Optional values: True, False
 open_request = False
 # 开启RTMP推流功能，需要安装FFmpeg，利用本地带宽提升接口播放体验; 可选值: True, False | Enable RTMP push function, need to install FFmpeg, use local bandwidth to improve the interface playback experience; Optional values: True, False
-open_rtmp =Flase
+open_rtmp =False
 # 开启页面服务，用于控制是否启动结果页面服务；如果使用青龙等平台部署，有专门设定的定时任务，需要更新完成后停止运行，可以关闭该功能; 可选值: True, False | Enable page service, used to control whether to start the result page service; If you use platforms such as Qinglong for deployment, there are special scheduled tasks, you need to stop running after the update is completed, you can turn off this function; Optional values: True, False
 open_service = True
 # 开启测速功能，获取响应时间、速率、分辨率; 可选值: True, False | Enable speed test functionality to obtain response time, rate, and resolution; Optional values: True, False
@@ -38,7 +38,7 @@ open_speed_test = True
 # 开启订阅源功能; 可选值: True, False | Enable subscription source function; Optional values: True, False
 open_subscribe = True
 # 开启补偿机制模式，用于控制当频道接口数量不足时，自动将不满足条件（例如低于最小速率）但可能可用的接口添加至结果中，从而避免结果为空的情况; 可选值: True, False | Enable compensation mechanism mode, used to control when the number of channel interfaces is insufficient, automatically add interfaces that do not meet the conditions (such as lower than the minimum rate) but may be available to the result, thereby avoiding the result being empty; Optional values: True, False
-open_supply = Flase
+open_supply = False
 # 开启更新，用于控制是否更新接口，若关闭则所有工作模式（获取接口和测速）均停止; 可选值: True, False | Enable update, used to control whether to update the interface, if closed, all working modes (get interface and speed measurement) will stop; Optional values: True, False
 open_update = True
 # 开启显示更新时间; 可选值: True, False | Enable display update time; Optional values: True, False
