--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -14,11 +14,11 @@ open_hotel =True
 # 开启 Foodie 酒店源工作模式; 可选值: True, False | Enable Foodie hotel source working mode; Optional values: True, False
 open_hotel_foodie = True
 # 开启 FOFA、ZoomEye 酒店源工作模式; 可选值: True, False | Enable FOFA, ZoomEye hotel source working mode; Optional values: True, False
-open_hotel_fofa = False
+open_hotel_fofa = True
 # 开启本地源功能，将使用模板文件与本地源文件（local.txt）中的数据；可选值: True, False | Enable local source function, will use the data in the template file and the local source file (local.txt); Optional values: True, False
 open_local = True
 # 开启转换生成 m3u 文件类型结果链接，支持显示频道图标; 可选值: True, False | Enable to convert and generate m3u file type result links, support display channel icons; Optional values: True, False
-open_m3u_result = False
+open_m3u_result = True
 # 开启组播源功能，关闭后所有组播源工作模式都将关闭; 可选值: True, False | Enable multicast source function, after closing, all multicast source working modes will be closed; Optional values: True, False
 open_multicast = False
 # 开启 Foodie 组播源工作模式; 可选值: True, False | Enable Foodie multicast source working mode; Optional values: True, False
@@ -62,7 +62,7 @@ final_file = output/user_result.txt
 # 结果中偏好的酒店源接口数量 | Preferred number of hotel source interfaces in the result
 hotel_num = 10
 # 酒店地区获取分页数量 | Number of hotel region acquisition pages
-hotel_page_num = 1
+hotel_page_num = 2
 # 酒店源地区列表，"全部"表示所有地区 | Hotel source region list, "all" means all regions
 hotel_region_list = 全部
 # 接口运营商，用于控制结果中只包含填写的运营商类型，支持关键字过滤，英文逗号分隔，不填写表示不指定运营商 | Interface operator, used to control the result to only include the filled operator type, supports keyword filtering, separated by English commas, not filled in means no operator specified
@@ -94,7 +94,7 @@ multicast_num = 10
 # 组播地区获取分页数量 | Number of multicast region acquisition pages
 multicast_page_num = 1
 # 组播源地区列表，"全部"表示所有地区 | Multicast source region list, "all" means all regions
-multicast_region_list = 全部
+multicast_region_list = 广西
 # 结果中偏好的关键字搜索接口数量 | Preferred number of keyword search interfaces in the result
 online_search_num = 10
 # 关键字搜索频道获取分页数量 | Number of keyword search channel acquisition pages
@@ -110,7 +110,7 @@ speed_test_limit = 5
 # 单个接口测速超时时长，单位秒(s)；数值越大测速所需时间越长，能提高获取接口数量，但质量会有所下降；数值越小测速所需时间越短，能获取低延时的接口，质量较好；调整此值能优化更新时间 | Single interface speed measurement timeout duration, unit seconds (s); The larger the value, the longer the speed measurement time, which can improve the number of interfaces obtained, but the quality will decline; The smaller the value, the shorter the speed measurement time, which can obtain low-latency interfaces with better quality; Adjusting this value can optimize the update time
 speed_test_timeout = 7
 # 测速阶段使用Host地址进行过滤，相同Host地址的频道将共用测速数据，开启后可大幅减少测速所需时间，但可能会导致测速结果不准确；可选值: True, False | Use Host address for filtering during speed measurement, channels with the same Host address will share speed measurement data, enabling this can significantly reduce the time required for speed measurement, but may lead to inaccurate speed measurement results; Optional values: True, False
-speed_test_filter_host = False
+speed_test_filter_host = True
 # 模板文件路径， 默认值: config/demo.txt | Template file path, Default value: config/demo.txt
 source_file = config/user_demo.txt
 # 结果中偏好的订阅源接口数量 | Preferred number of subscription source interfaces in the result
