--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -62,11 +62,11 @@ final_file = output/user_result.txt
 # 结果中偏好的酒店源接口数量 | Preferred number of hotel source interfaces in the result
 hotel_num = 10
 # 酒店地区获取分页数量 | Number of hotel region acquisition pages
-hotel_page_num = 2
+hotel_page_num = 1
 # 酒店源地区列表，"全部"表示所有地区 | Hotel source region list, "all" means all regions
 hotel_region_list = 全部
 # 接口运营商，用于控制结果中只包含填写的运营商类型，支持关键字过滤，英文逗号分隔，不填写表示不指定运营商 | Interface operator, used to control the result to only include the filled operator type, supports keyword filtering, separated by English commas, not filled in means no operator specified
-isp =
+isp =电信
 # 结果中偏好的 IPv4 接口数量 | Preferred number of IPv4 interfaces in the result
 ipv4_num =
 # 结果中偏好的 IPv6 接口数量 | Preferred number of IPv6 interfaces in the result
@@ -76,7 +76,7 @@ ipv6_support = False
 # 生成结果中接口的协议类型，可选值：ipv4、ipv6、全部、all | Protocol type of the interface in the generated result, optional values: ipv4, ipv6, 全部, all
 ipv_type = ipv4
 # 接口协议类型偏好，优先将该类型的接口排在结果前面，可选值：ipv4、ipv6、自动、auto | Interface protocol type preference, prefer to put this type of interface in front of the result, optional values: ipv4, ipv6, 自动, auto
-ipv_type_prefer =
+ipv_type_prefer = ipv4
 # 接口归属地，用于控制结果只包含填写的归属地类型，支持关键字过滤，英文逗号分隔，不填写表示不指定归属地，建议使用靠近使用者的归属地，能提升播放体验 | Interface location, used to control the result to only include the filled location type, supports keyword filtering, separated by English commas, not filled in means no location specified, it is recommended to use the location close to the user, which can improve the playback experience
 location =
 # 本地源文件路径，默认值: config/local.txt | Local source file path, Default value: config/local.txt
@@ -98,7 +98,7 @@ multicast_region_list =
 # 结果中偏好的关键字搜索接口数量 | Preferred number of keyword search interfaces in the result
 online_search_num = 10
 # 关键字搜索频道获取分页数量 | Number of keyword search channel acquisition pages
-online_search_page_num = 2
+online_search_page_num = 1
 # 结果偏好的接口来源，结果优先按该顺序进行排序，逗号分隔，例如：local,hotel,multicast,subscribe,online_search；local:本地源，hotel：酒店源，multicast：组播源，subscribe：订阅源，online_search：关键字搜索；不填写则表示不指定来源，按照接口速率排序 | Preferred interface source of the result, the result is sorted according to this order, separated by commas, for example: local, hotel, multicast, subscribe, online_search; local: local source, hotel: hotel source, multicast: multicast source, subscribe: subscription source, online_search: keyword search; If not filled in, it means that the source is not specified, and it is sorted according to the interface rate
 origin_type_prefer =
 # 获取最近时间范围内更新的接口（单位天），适当减小可避免出现匹配问题 | Get the interface updated within the recent time range (unit day), appropriately reducing can avoid matching problems
