--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -44,7 +44,7 @@ open_update = True
 # 开启显示更新时间; 可选值: True, False | Enable display update time; Optional values: True, False
 open_update_time = True
 # 开启显示接口说明信息，用于控制是否显示接口来源、分辨率、协议类型等信息，为$符号后的内容，播放软件使用该信息对接口进行描述，若部分播放器（如PotPlayer）不支持解析导致无法播放可关闭; 可选值: True, False | Enable to display interface description information, used to control whether to display interface source, resolution, protocol type and other information, the content after the $ symbol, the playback software uses this information to describe the interface, if some players (such as PotPlayer) do not support parsing and cannot play, you can turn it off; Optional values: True, False
-open_url_info = False
+open_url_info = True
 # 开启使用本地缓存数据，适用于查询请求失败场景（仅针对酒店源与组播源）; 可选值: True, False | Enable to use local cached data, suitable for query request failure scenarios (only for hotel source and multicast source); Optional values: True, False
 open_use_cache = True
 # 开启使用历史更新结果（包含模板与结果文件的接口），合并至本次更新中; 可选值: True, False | Enable to use historical update results (including interfaces of templates and result files), merged into this update; Optional values: True, False
@@ -66,7 +66,7 @@ hotel_page_num = 1
 # 酒店源地区列表，"全部"表示所有地区 | Hotel source region list, "all" means all regions
 hotel_region_list = 全部
 # 接口运营商，用于控制结果中只包含填写的运营商类型，支持关键字过滤，英文逗号分隔，不填写表示不指定运营商 | Interface operator, used to control the result to only include the filled operator type, supports keyword filtering, separated by English commas, not filled in means no operator specified
-isp =电信
+isp =
 # 结果中偏好的 IPv4 接口数量 | Preferred number of IPv4 interfaces in the result
 ipv4_num =
 # 结果中偏好的 IPv6 接口数量 | Preferred number of IPv6 interfaces in the result
